apply plugin: 'java'
apply plugin: 'idea'

group = 'juuxel.cubic'
version =  '0.4.0-beta-1'

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

task wrapper(type: Wrapper) {
    gradleVersion = '4.3.1'
}

jar {
    manifest {
        attributes 'Main-Class': 'juuxel.cubic.Cubic'
    }
}
